@@ -5,7 +5,6 @@ import (
 	"strings"
 
 	"github.com/elastic/beats/libbeat/common"
-	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/libbeat/processors/annotate/kubernetes"
 	corev1 "github.com/ericchiang/k8s/api/v1"
 )
@@ -15,54 +14,34 @@ const (
 )
 
 func init() {
-
 	// Register default indexers
 	kubernetes.Indexing.AddIndexer(IpPortIndexerName, newIpPortIndexer)
+	cfg := common.NewConfig()
 
-	indexer := kubernetes.Indexing.GetIndexer(IpPortIndexerName)
+	//Add IP Port Indexer as a default indexer
+	kubernetes.Indexing.AddDefaultIndexerConfig(IpPortIndexerName, *cfg)
 
-	if indexer != nil {
-		cfg := common.NewConfig()
-		ipPort, err := newIpPortIndexer(*cfg)
-		if err == nil {
-			kubernetes.Indexing.AddDefaultIndexer(ipPort)
-		} else {
-			logp.Err("Unable to load indexer plugin due to error: %v", err)
-		}
-	} else {
-		logp.Err("Unable to get indexer plugin %s", IpPortIndexerName)
+	config := map[string]interface{}{
+		"lookup_fields": []string{"metricset.host"},
 	}
-
-	matcher := kubernetes.Indexing.GetMatcher(kubernetes.FieldMatcherName)
-
-	if matcher != nil {
-		config := map[string]interface{}{
-			"lookup_fields": []string{"metricset.host"},
-		}
-		fieldCfg, err := common.NewConfigFrom(config)
-		if err == nil {
-			matcher, err := kubernetes.NewFieldMatcher(*fieldCfg)
-			if err == nil {
-				kubernetes.Indexing.AddDefaultMatcher(matcher)
-			}
-		} else {
-			logp.Err("Unable to load matcher plugin due to error: %v", err)
-		}
-	} else {
-		logp.Err("Unable to get matcher plugin %s", kubernetes.FieldMatcherName)
+	fieldCfg, err := common.NewConfigFrom(config)
+	if err == nil {
+		//Add field matcher with field to lookup as metricset.host
+		kubernetes.Indexing.AddDefaultMatcherConfig(kubernetes.FieldMatcherName, *fieldCfg)
 	}
-
 }
 
 // IpPortIndexer indexes pods based on all their host:port combinations
-type IpPortIndexer struct{}
+type IpPortIndexer struct {
+	genMeta kubernetes.GenMeta
+}
 
-func newIpPortIndexer(_ common.Config) (kubernetes.Indexer, error) {
-	return &IpPortIndexer{}, nil
+func newIpPortIndexer(_ common.Config, genMeta kubernetes.GenMeta) (kubernetes.Indexer, error) {
+	return &IpPortIndexer{genMeta: genMeta}, nil
 }
 
 func (h *IpPortIndexer) GetMetadata(pod *corev1.Pod) []kubernetes.MetadataIndex {
-	commonMeta := kubernetes.GenMetadata(pod)
+	commonMeta := h.genMeta.GenerateMetaData(pod)
 	hostPorts := h.GetIndexes(pod)
 	var metadata []kubernetes.MetadataIndex
 
